--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1 class="title">HTML&CSSの開発環境を用意しよう！</h1>
     <p>自分のPCでWebページを開発する方法を学習しましょう</p>
+    <p>変更するには、参照ファイルを再度指定する必要がある。
   </body>
 </html>
