--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <h1 class="title">HTML&CSSの開発環境を用意しよう！</h1>
+    <h1 class="title">HTML&CSSの開発環境を用意しようよ！</h1>
     <p>自分のPCでWebページを開発する方法を学習しましょう</p>
     <p2>変更するには、参照ファイルを再度指定する必要がある。</p>
     <p3>index.htmlボタン内右三角ボタン→index.htmlを入力</p>
