--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1 class="title">HTML&CSSの開発環境を用意しよう！</h1>
     <p>自分のPCでWebページを開発する方法を学習しましょう</p>
+    <p>更新難しい！</p>
     <p>GitHubをはじめましたよ。</p>
   </body>
 </html>
